Edited maximum css code , make responsive even below 320px screen

--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
 <body>
     <div class="container">
         <div class="card">
-            <div class="titel">
+            <div class="header">
                 <img src="img/title image.svg" alt="">
             </div>
             <div class="form">
                 <form class="loginform" action="">
                     <input type="number email text" placeholder=" Phone number, username,or email">
-                    <input type="password" placeholder=" Password">
-                    <button type="submit"> <a href="#"> Login </a></button>
+                    <input type="password" placeholder=" Password" id="password">
+                    <button type="submit" id="login"> <a href="#"> Login </a></button>
                 </form>
             </div>
-            <div class="croosline">
-                <p> ------------------- OR -------------------</p>
-            </div>
-            <div class="fb_login">
+            <div class="login-with-fb">
                 <div class="loginwithfb">
                     <img src="img/facebook.svg" alt="facebook">
                     <a href="#"> Log in with Facebook </a>
@@ -33,13 +30,10 @@
                     <a href="#"> Forgot password? </a>
                 </div>
             </div>
-
         </div>
-        <div class="secondnd_card">
-            <div class="sign_up">
-                <p> Don't have an account? </p>
-                <a href="#"> Sign up </a>
-            </div>
+        <div class="signup_section">
+            <p> Don't have an account? </p>
+            <a href="#"> Sign up </a>
         </div>
     </div>
 </body>
