Instagram heading img missing problem solved

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="card">
             <div class="header">
-                <img src="img/title image.svg" alt="">
+                <img src="img/heading image.svg" alt="instagram title logo">
             </div>
             <div class="form">
                 <form class="loginform" action="">
