added some comment before every main section

--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
     
 </head>
 <body>
-    <div class="container">
+
+    <!-- main container-->
+    <div class="container"> 
+
         <div class="card">
-            <div class="header">
+
+            <!----- Header img section ------>
+            <div class="header"> 
                 <img src="img/heading image.svg" alt="instagram title logo">
             </div>
-            <div class="form">
+
+            <!-- login form section -->
+            <div class="form"> 
                 <form class="loginform" action="">
                     <input type="number email text" placeholder=" Phone number, username,or email">
                     <input type="password" placeholder=" Password" id="password">
                     <button type="submit" id="login"> <a href="#"> Login </a></button>
                 </form>
             </div>
+
+            <!-- social media login section  -->
             <div class="login-with-fb">
                 <div class="loginwithfb">
                     <img src="img/facebook.svg" alt="facebook">
@@ -30,8 +39,10 @@
                     <a href="#"> Forgot password? </a>
                 </div>
             </div>
-        </div>
-        <div class="signup_section">
+            </div>
+
+            <!--  sign up section  -->
+            <div class="signup_section">
             <p> Don't have an account? </p>
             <a href="#"> Sign up </a>
         </div>
