I added & remove  some css and reorganize html file, fixed some responsive issue

--- a/index.html
+++ b/index.html
@@ -25,27 +25,23 @@
                 <form class="loginform" action="">
                     <input type="number email text" placeholder=" Phone number, username,or email">
                     <input type="password" placeholder=" Password" id="password">
-                    <button type="submit" id="login"> <a href="#"> Login </a></button>
+                    <button type="submit" id="login">Login</button>
                 </form>
             </div>
 
             <!-- social media login section  -->
-            <div class="login-with-fb">
-                <div class="loginwithfb">
-                    <img src="img/facebook.svg" alt="facebook">
-                    <a href="#"> Log in with Facebook </a>
-                </div>
-                <div class="forgotpass">
-                    <a href="#"> Forgot password? </a>
-                </div>
-            </div>
-            </div>
+            <a href="#" class="fb_login"> 
+                <img src="img/facebook.svg" alt="Facebook Logo">
+                <span>Login with Facebook</span>
+            </a>
+            <a href="#" class="forgotpass"> Forgot password? </a>
+        </div>
 
             <!--  sign up section  -->
             <div class="signup_section">
-            <p> Don't have an account? </p>
-            <a href="#"> Sign up </a>
-        </div>
+            <a href="#" class="signup">
+                <span> Don't have an account? </span> Sign up </a>
+            </div>
     </div>
 </body>
 </html>
