(feat)added README files and edited css code

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <!-- social media login section  -->
             <a href="#" class="fb_login"> 
-                <img src="img/facebook.svg" alt="Facebook Logo">
+                <img class="fb-logo" src="img/facebook.svg" alt="Facebook Logo">
                 <span>Login with Facebook</span>
             </a>
             <a href="#" class="forgotpass"> Forgot password? </a>
